wdl-analysis/tests/validation/scoped-exprs/source.errors
error: task `ok` does not have an input named `foo`
   ┌─ tests/validation/scoped-exprs/source.wdl:16:13
   │
16 │             foo: hints {
   │             ^^^

error: task `ok` does not have an input named `baz`
   ┌─ tests/validation/scoped-exprs/source.wdl:21:13
   │
21 │             baz.bar.qux: hints {
   │             ^^^

error: task `ok` does not have an output named `foo`
   ┌─ tests/validation/scoped-exprs/source.wdl:30:13
   │
30 │             foo: hints {
   │             ^^^

error: task `ok` does not have an output named `baz`
   ┌─ tests/validation/scoped-exprs/source.wdl:35:13
   │
35 │             baz.bar.qux: hints {
   │             ^^^

error: `hints` literals can only be used within a hints section
   ┌─ tests/validation/scoped-exprs/source.wdl:47:13
   │
47 │     Int a = hints {
   │             ^^^^^

error: `input` literals can only be used within a hints section
   ┌─ tests/validation/scoped-exprs/source.wdl:51:13
   │
51 │     Int b = input {
   │             ^^^^^

error: `output` literals can only be used within a hints section
   ┌─ tests/validation/scoped-exprs/source.wdl:55:13
   │
55 │     Int c = output {
   │             ^^^^^^

error: `hints` literals cannot be nested within `hints` literals
   ┌─ tests/validation/scoped-exprs/source.wdl:61:18
   │
60 │         ok: hints {
   │             ----- the outer `hints` literal is here
61 │             bad: hints {
   │                  ^^^^^ this `hints` literal cannot be nested

error: `input` literals cannot be nested within `hints` literals
   ┌─ tests/validation/scoped-exprs/source.wdl:62:22
   │
61 │             bad: hints {
   │                  ----- the outer `hints` literal is here
62 │                 bad: input {
   │                      ^^^^^ this `input` literal cannot be nested

error: task `bad` does not have an input named `bad`
   ┌─ tests/validation/scoped-exprs/source.wdl:63:21
   │
63 │                     bad: output {
   │                     ^^^

error: `output` literals cannot be nested within `input` literals
   ┌─ tests/validation/scoped-exprs/source.wdl:63:26
   │
62 │                 bad: input {
   │                      ----- the outer `input` literal is here
63 │                     bad: output {
   │                          ^^^^^^ this `output` literal cannot be nested

error: type mismatch: expected type `hints`, but found type `output`
   ┌─ tests/validation/scoped-exprs/source.wdl:63:26
   │  
63 │                       bad: output {
   │                       --- this expects type `hints`
   │ ╭──────────────────────────^
64 │ │ 
65 │ │                     }
   │ ╰─────────────────────^ this is type `output`

error: task `bad` does not have an input named `ok`
   ┌─ tests/validation/scoped-exprs/source.wdl:70:13
   │
70 │             ok: hints {
   │             ^^

error: `hints` literals cannot be nested within `hints` literals
   ┌─ tests/validation/scoped-exprs/source.wdl:71:22
   │
70 │             ok: hints {
   │                 ----- the outer `hints` literal is here
71 │                 bad: hints {
   │                      ^^^^^ this `hints` literal cannot be nested

error: task `bad` does not have an input named `inputs`
   ┌─ tests/validation/scoped-exprs/source.wdl:75:13
   │
75 │             inputs: input {
   │             ^^^^^^

error: `input` literals cannot be nested within `input` literals
   ┌─ tests/validation/scoped-exprs/source.wdl:75:21
   │
69 │         inputs: input {
   │                 ----- the outer `input` literal is here
   ·
75 │             inputs: input {
   │                     ^^^^^ this `input` literal cannot be nested

error: type mismatch: expected type `hints`, but found type `input`
   ┌─ tests/validation/scoped-exprs/source.wdl:75:21
   │  
75 │               inputs: input {
   │               ------ this expects type `hints`
   │ ╭─────────────────────^
76 │ │                 a: input {
77 │ │ 
78 │ │                 },
   · │
92 │ │                 },
93 │ │             }
   │ ╰─────────────^ this is type `input`

error: task `bad` does not have an input named `a`
   ┌─ tests/validation/scoped-exprs/source.wdl:76:17
   │
76 │                 a: input {
   │                 ^

error: `input` literals cannot be nested within `input` literals
   ┌─ tests/validation/scoped-exprs/source.wdl:76:20
   │
75 │             inputs: input {
   │                     ----- the outer `input` literal is here
76 │                 a: input {
   │                    ^^^^^ this `input` literal cannot be nested

error: type mismatch: expected type `hints`, but found type `input`
   ┌─ tests/validation/scoped-exprs/source.wdl:76:20
   │  
76 │                   a: input {
   │                   - this expects type `hints`
   │ ╭────────────────────^
77 │ │ 
78 │ │                 },
   │ ╰─────────────────^ this is type `input`

error: task `bad` does not have an input named `b`
   ┌─ tests/validation/scoped-exprs/source.wdl:79:17
   │
79 │                 b: hints {
   │                 ^

error: `hints` literals cannot be nested within `input` literals
   ┌─ tests/validation/scoped-exprs/source.wdl:79:20
   │
75 │             inputs: input {
   │                     ----- the outer `input` literal is here
   ·
79 │                 b: hints {
   │                    ^^^^^ this `hints` literal cannot be nested

error: `input` literals cannot be nested within `hints` literals
   ┌─ tests/validation/scoped-exprs/source.wdl:80:24
   │
79 │                 b: hints {
   │                    ----- the outer `hints` literal is here
80 │                     a: input {
   │                        ^^^^^ this `input` literal cannot be nested

error: `output` literals cannot be nested within `hints` literals
   ┌─ tests/validation/scoped-exprs/source.wdl:83:24
   │
79 │                 b: hints {
   │                    ----- the outer `hints` literal is here
   ·
83 │                     b: output {
   │                        ^^^^^^ this `output` literal cannot be nested

error: `hints` literals cannot be nested within `hints` literals
   ┌─ tests/validation/scoped-exprs/source.wdl:86:24
   │
79 │                 b: hints {
   │                    ----- the outer `hints` literal is here
   ·
86 │                     c: hints {
   │                        ^^^^^ this `hints` literal cannot be nested

error: task `bad` does not have an input named `c`
   ┌─ tests/validation/scoped-exprs/source.wdl:90:17
   │
90 │                 c: output {
   │                 ^

error: `output` literals cannot be nested within `input` literals
   ┌─ tests/validation/scoped-exprs/source.wdl:90:20
   │
75 │             inputs: input {
   │                     ----- the outer `input` literal is here
   ·
90 │                 c: output {
   │                    ^^^^^^ this `output` literal cannot be nested

error: type mismatch: expected type `hints`, but found type `output`
   ┌─ tests/validation/scoped-exprs/source.wdl:90:20
   │  
90 │                   c: output {
   │                   - this expects type `hints`
   │ ╭────────────────────^
91 │ │ 
92 │ │                 },
   │ ╰─────────────────^ this is type `output`

error: task `bad` does not have an output named `a`
   ┌─ tests/validation/scoped-exprs/source.wdl:96:13
   │
96 │             a: input {
   │             ^

error: `input` literals cannot be nested within `output` literals
   ┌─ tests/validation/scoped-exprs/source.wdl:96:16
   │
95 │         outputs: output {
   │                  ------ the outer `output` literal is here
96 │             a: input {
   │                ^^^^^ this `input` literal cannot be nested

error: type mismatch: expected type `hints`, but found type `input`
   ┌─ tests/validation/scoped-exprs/source.wdl:96:16
   │  
96 │               a: input {
   │               - this expects type `hints`
   │ ╭────────────────^
97 │ │ 
98 │ │             },
   │ ╰─────────────^ this is type `input`

error: task `bad` does not have an output named `b`
   ┌─ tests/validation/scoped-exprs/source.wdl:99:13
   │
99 │             b: hints {
   │             ^

error: `input` literals cannot be nested within `hints` literals
    ┌─ tests/validation/scoped-exprs/source.wdl:100:20
    │
 99 │             b: hints {
    │                ----- the outer `hints` literal is here
100 │                 a: input {
    │                    ^^^^^ this `input` literal cannot be nested

error: `output` literals cannot be nested within `hints` literals
    ┌─ tests/validation/scoped-exprs/source.wdl:103:20
    │
 99 │             b: hints {
    │                ----- the outer `hints` literal is here
    ·
103 │                 b: output {
    │                    ^^^^^^ this `output` literal cannot be nested

error: `hints` literals cannot be nested within `hints` literals
    ┌─ tests/validation/scoped-exprs/source.wdl:106:20
    │
 99 │             b: hints {
    │                ----- the outer `hints` literal is here
    ·
106 │                 c: hints {
    │                    ^^^^^ this `hints` literal cannot be nested

error: task `bad` does not have an output named `c`
    ┌─ tests/validation/scoped-exprs/source.wdl:110:13
    │
110 │             c: output {
    │             ^

error: `output` literals cannot be nested within `output` literals
    ┌─ tests/validation/scoped-exprs/source.wdl:110:16
    │
 95 │         outputs: output {
    │                  ------ the outer `output` literal is here
    ·
110 │             c: output {
    │                ^^^^^^ this `output` literal cannot be nested

error: type mismatch: expected type `hints`, but found type `output`
    ┌─ tests/validation/scoped-exprs/source.wdl:110:16
    │  
110 │               c: output {
    │               - this expects type `hints`
    │ ╭────────────────^
111 │ │ 
112 │ │             }
    │ ╰─────────────^ this is type `output`

